--- a/index.html
+++ b/index.html
@@ -10,10 +10,40 @@
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet" />
-      <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-    
-  <body>
 
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <ul class="header-list">
+            <li><span href="#">8 (812) 123-45-67</span>|</li>
+            <li><span href="#">Работаем 7 дней в неделю</span>|</li>
+            <li><span href="#">9:00 — 18:00</span></li>
+            <li><a href="#"></a></li>
+          </ul>
+
+          <div class="header-contacts">
+            <a href="#">Войти /</a>
+            <a href="#">Регистрация</a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom">
+          <div class="container">
+            <div class="bottom-content">
+              <a href="#"><img class="header-logo" src="./img/header/logo-header.svg" alt="logo-header"></a>
+              <ul class="bottom-list">
+                <li><a href="#">Понравилось</a></li>
+                <li><a href="#">личный кабинет</a></li>
+                <li><a href="#">настройки</a></li>
+                <li class="bottom-basket"><a href="#"><img src="./img/header/basket.svg" alt="basket"></a></li>
+                <li class="bottom-search"><a href="#"><img src="./img/header/search.svg" alt="search"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+    </header>
   </body>
 </html>
