--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
       <div class="container">
         <div class="header-top">
           <ul class="header-list">
-            <li><span href="#">8 (812) 123-45-67</span>|</li>
+            <li><span href="#"><a href="https://web.whatsapp.com/" target="_blank">8 (812) 123-45-67</a></span>|</li>
             <li><span href="#">Работаем 7 дней в неделю</span>|</li>
             <li><span href="#">9:00 — 18:00</span></li>
-            <li><a href="#"></a></li>
           </ul>
-
           <div class="header-contacts">
-            <a href="#">Войти /</a>
+            <span><a href="#">Войти </a>/</span>
             <a href="#">Регистрация</a>
           </div>
         </div>
@@ -33,11 +31,16 @@
       <div class="header-bottom">
           <div class="container">
             <div class="bottom-content">
-              <a href="#"><img class="header-logo" src="./img/header/logo-header.svg" alt="logo-header"></a>
-              <ul class="bottom-list">
+              <button class="bottom-burger"><div class="line"></div></button>
+              <a href="#"><img class="bottom-logo" src="./img/header/logo-header.svg" alt="logo-header"></a>
+              <ul class="bottom-list hidden">
                 <li><a href="#">Понравилось</a></li>
-                <li><a href="#">личный кабинет</a></li>
+                <li><a href="#">кабинет</a></li>
                 <li><a href="#">настройки</a></li>
+                <div class="bottom-none">
+                  <li><a href="#">войти</a></li>
+                  <li><a href="#">регистрация</a></li>
+                </div>
                 <li class="bottom-basket"><a href="#"><img src="./img/header/basket.svg" alt="basket"></a></li>
                 <li class="bottom-search"><a href="#"><img src="./img/header/search.svg" alt="search"></a></li>
               </ul>
@@ -45,5 +48,6 @@
           </div>
         </div>
     </header>
+    <script src="./js/main.js"></script>
   </body>
 </html>
